# WatchNext

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json  main.cpp  meson.build  meson_options.txt  showNode.cpp
cmake/: StandardProjectSettings.cmake  StaticAnalyzers.cmake
pch/: cpp_pch.h
src/: cApp.cpp  cApp.h  cMain.cpp  cMain.h  meson.build
subprojects/api/: meson.build
subprojects/api/include/: SeedrAPI.h
subprojects/api/src/: SeedrAPI.cpp
test/: test.cpp  test.h
